2015-08-02  Nikolaus Rath  <Nikolaus@rath.org>

	* nnimap.el (nnimap-request-move-article)
	(nnimap-process-expiry-targets, nnimap-split-incoming-mail): Use MOVE
	extension if available.

2015-08-02  Nikolaus Rath  <Nikolaus@rath.org>

	* nnimap.el (nnimap-open-connection-1): explicitly ask server for
	capabilities instead of relying on LOGIN response.

2015-07-31  Paul Eggert  <eggert@cs.ucla.edu>

	* nnbabyl.el (nnbabyl-retrieve-headers):
	* nndiary.el (nndiary-retrieve-headers):
	* nneething.el (nneething-retrieve-headers):
	* nnmbox.el (nnmbox-retrieve-headers):
	* nnmh.el (nnmh-retrieve-headers):
	* nnml.el (nnml-retrieve-headers):
	* nnspool.el (nnspool-retrieve-headers):
	* nntp.el (nntp-retrieve-headers, nntp-retrieve-articles):
	Prefer (floor (* 100.0 NUMERATOR) DENOMINATOR) when calculating
	progress-report percentages and the like.  This avoids problems
	if (* 100 NUMERATOR) would overflow.

	* gnus-registry.el (gnus-registry-import-eld):
	* registry.el (registry-reindex):
	Use (* 100.0 ...) rather than (* 100 ...) to avoid int overflow issues.

2015-07-17  Julien Danjou  <jd@abydos>

	* sieve-mode.el (sieve-font-lock-keywords): Add missing "body" test
	command.

2015-07-11  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* gnus-registry.el (gnus-registry--set/remove-mark): Correct the order
	of function arguments.

2015-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el: Clean up "unused var" warnings.
	(auth-source-creation-prompts): Declare.
	(nnimap-retrieve-headers, nnimap-status-message)
	(nnimap-request-create-group, nnimap-request-delete-group)
	(nnimap-close-group, nnimap-request-move-article)
	(nnimap-request-accept-article, nnimap-request-newgroups)
	(nnimap-request-post, nnimap-dummy-active-number)
	(nnimap-save-mail-spec, nnimap-get-groups): Add _ to unused vars.
	(nnimap-parse-flags): Remove unused var `p'.
	(nnimap-retrieve-group-data-early): Remove unused var `groups'.
	(nnimap-flags-to-marks): Remove unused var `totalp'.
